@@ -1,10 +1,10 @@
-requires "Date::Format" => "2.22";
-requires "Encode" => "2.12";
-requires "File::DataClass" => "v0.53.0";
-requires "Moo" => "1.006000";
+requires "Date::Format" => "2.24";
+requires "Encode" => "2.67";
+requires "File::DataClass" => "v0.61.0";
+requires "Moo" => "2.000001";
 requires "Try::Tiny" => "0.22";
 requires "Type::Tiny" => "1.000002";
-requires "Unexpected" => "v0.35.0";
+requires "Unexpected" => "v0.38.0";
 requires "namespace::autoclean" => "0.22";
 requires "perl" => "5.010001";
 
