@@ -2,8 +2,8 @@ package File::Gettext::ResultSource;
 
 use namespace::autoclean;
 
+use File::DataClass::Types qw( HashRef );
 use Moo;
-use File::DataClass::Types  qw( HashRef );
 
 extends q(File::DataClass::ResultSource);
 
@@ -68,7 +68,7 @@ Peter Flanigan, C<< <pjfl@cpan.org> >>
 
 =head1 License and Copyright
 
-Copyright (c) 2014 Peter Flanigan. All rights reserved
+Copyright (c) 2015 Peter Flanigan. All rights reserved
 
 This program is free software; you can redistribute it and/or modify it
 under the same terms as Perl itself. See L<perlartistic>
