@@ -2,12 +2,12 @@ package File::Gettext::Storage::PO;
 
 use namespace::autoclean;
 
-use Moo;
 use Date::Format                 ( );
 use Encode                     qw( decode encode );
 use File::DataClass::Constants qw( NUL SPC );
 use File::DataClass::Functions qw( extension_map );
 use File::Gettext::Constants   qw( CONTEXT_SEP );
+use Moo;
 
 extension_map '+File::Gettext::Storage::PO' => '.po';
 
@@ -485,7 +485,7 @@ Peter Flanigan, C<< <pjfl@cpan.org> >>
 
 =head1 License and Copyright
 
-Copyright (c) 2014 Peter Flanigan. All rights reserved
+Copyright (c) 2015 Peter Flanigan. All rights reserved
 
 This program is free software; you can redistribute it and/or modify it
 under the same terms as Perl itself. See L<perlartistic>
